--- a/public/locales/sr-Cyrl/common.json
+++ b/public/locales/sr-Cyrl/common.json
@@ -1,6 +1,7 @@
 {
   "change-locale": "Латиница",
-  "pageTitle": "Who is хакатон",
+  "pageTitle": "Whois Онлајн Хакатон",
+  "pageDescription": "Такмичи се 25. и 26. септембра и изради апликацију која нуди одговор о националним али и свим другим доменима на свету.",
   "header": {
     "cta": "Пријави Екипу",
     "date": "25. и 26. септембар"
