--- a/public/locales/sr-Latn/common.json
+++ b/public/locales/sr-Latn/common.json
@@ -1,6 +1,7 @@
 {
   "change-locale": "Ćirilica",
-  "pageTitle": "Who is hakaton",
+  "pageTitle": "Whois Onlajn Hakaton",
+  "pageDescription": "Takmiči se 25. i 26. septembra i izradi aplikaciju koja nudi odgovor o nacionalnim ali i svim drugim domenima na svetu.",
   "header": {
     "cta": "Prjavi Ekipu",
     "date": "25. i 26. septembar"
