policies, icann, fix

--- a/public/locales/sr-Cyrl/common.json
+++ b/public/locales/sr-Cyrl/common.json
@@ -43,7 +43,10 @@
     "faq7text": "Такмичарски део хакатона траје 48 сати. Такмичари сами обезбеђују опрему потребну за рад, организатор обезбеђује канале комуникације за питања и праћење прогреса."
   },
   "footer": {
-    "copyright": "Сва права задржана."
+    "copyright": "Сва права задржана.",
+    "privacy": "Политика приватности",
+    "terms": "Услови коришћења",
+    "cookies": "Политика колачића"
   },
   "time": {
     "days": "дана",
